--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -3,10 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Code Review Tool</title>
+  <title>CodeChain Analyzer</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
-<body>
+<body data-theme="dark">
   <%- body %>
   <script src="js/script.js"></script>
 </body>
