--- a/views/index.ejs
+++ b/views/index.ejs
@@ -23,5 +23,6 @@
   </div>
   <button id="analyzeButton" class="button">Analyze Code</button>
   <div id="loader" class="loader"></div>
+  <div id="loader-note" class="loader-note"></div>
   <div id="result" class="result"></div>
 </div>
